# autonomous-coding-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.vps  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vps_entrypoint.py
.github/scripts/: ssh_invoke.py
.github/workflows/: agent-builder.yml  deploy-preview.yml  deploy.yml  stop-agent-on-close.yml
agent/: claude_code.py  vps_entrypoint.py
agent/deployment/: Dockerfile  agent.service  bootstrap.sh  deploy.sh  docker-compose.yml
agent/deployment/nginx/: agent.conf.template
agent/src/: __init__.py  session_manager.py
deployment/: deploy.sh  vps-setup.sh
nginx/: agent-previews.conf
product-repo-template/: README.md
product-repo-template/.github/workflows/: spec-bot.yml
scripts/: vps-setup.sh
src/: local_metrics.py
templates/product-repo/: .dockerignore  .env.example  .prettierignore  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
templates/product-repo/.github/ISSUE_TEMPLATE/: mvp-build.yml
templates/product-repo/.github/scripts/: generate_tests.py
templates/product-repo/.github/workflows/: ci.yml  issue-poller.yml  notify-agent.yml
templates/product-repo/apps/api/: Dockerfile  nodemon.json  package.json  tsconfig.json
templates/product-repo/deployment/: cleanup.sh  deploy.sh  nginx-proxy.conf  rollback.sh  setup-server.sh
templates/product-repo/e2e/: playwright.config.staging.d.ts  playwright.config.staging.d.ts.map  playwright.config.staging.js  smoke.spec.js  smoke.spec.ts
(+18 files in other folders)
